--- a/package.json
+++ b/package.json
@@ -17,6 +17,12 @@
     "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.3"
   },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
   "devDependencies": {
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
