--- a/package.json
+++ b/package.json
@@ -18,12 +18,10 @@
     "react-router-dom": "^6.4.3"
   },
   "scripts": {
-    "ios": "react-native run-ios",
-    "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest",
-    "test:e2e":"npm run test",
-    "test:e2e:build":"npm run build"
-},
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "./node_modules/.bin/netlify-lambda serve src",
+    "build": "react-scripts build"
+  },
   "devDependencies": {
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
