--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "./node_modules/.bin/netlify-lambda serve src",
-    "build": "react-scripts build"
+    "build": "webpack --config webpack.config.js"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
